Added ender IO and mechworks

--- a/KP_1.7.10_1/Configs/Languages/dutch.lang
+++ b/KP_1.7.10_1/Configs/Languages/dutch.lang
@@ -20,7 +20,7 @@ backup.backupcomplete=Reservekopie gemaakt. Je reservekopie is opgeslagen in de 
 backup.complete=Reservekopie gemaakt
 backup.nosaves=Kan geen reservekopie maken, aangezien er geen opgeslagen spellen zijn.
 backup.nosavestitle=Geen opgeslagen spellen gevonden.
-backup.sure=Reservekopies slaan je werelden op zodat je ze later terug kan halen of je houd de backup.%sAls je eenmaal een reservekopie hebt gemaakt kan je de zip file terug vinden in de Backups\/ map%sWil je een reservekopie van deze instantie?
+backup.sure=Reservekopies slaan je werelden op zodat je ze later terug kan halen of je houd de backup.%sAls je eenmaal een reservekopie hebt gemaakt kan je de zip file terug vinden in de Backups\\/ map%sWil je een reservekopie van deze instantie?
 common.add=Toevoegen
 common.backup=Reservekopie
 common.cancel=Annuleren
@@ -55,7 +55,7 @@ console.killsure=Weet je zeker dat je het Minecraft proces wilt stoppen?%sAls je
 console.show=Laat Console zien
 instance.alreadyinstance=Er is al een instantie die %s heet Hernoem en probeer opnieuw
 instance.browseropened=Browser geopend om %s bestand te downloaden
-instance.cannotcreate=Kan gee instantie cre\u00ebren, aangezien je geen gebruiker hebt geselecteerd
+instance.cannotcreate=Kan geen instantie cre\u00ebren, aangezien je geen gebruiker hebt geselecteerd
 instance.cantreinstall=Kan de pack niet herinstalleren, aangezien je geen gebruiker hebt geselecteerd
 instance.cantupdate=Kan de pack niet bijwerken, aangezien je geen gebruiker hebt geselecteerd
 instance.checkerrorlogs=Bekijk de error logs voor de fout
@@ -89,7 +89,6 @@ instance.pleasesave=Sla dit bestand op in de volgende locatie
 instance.selectall=Selecteer Allemaal
 instance.selectmods=Selecteer Mods om te installeren
 instance.selectrecommended=Selecteer Aanbevolen
-instance.startingprocess=Starting %s Process
 instance.uselatestlwjgl=Gebruik de laatste LWJGL
 instance.versiontoinstall=Versie om te installeren
 instance.zippingresourcepackfiles=Archiveren van Resource Pack bestanden
@@ -109,7 +108,6 @@ server.extractingjar=Uitpakken van Minecraft.jar
 server.zippingjar=Archiveren van Minecraft.jar
 settings.console=Zet Console aan
 settings.consolehelp=Of de console zichtbaar moet zijn wanneer je de launcher start.
-settings.downloadserver=Download Server
 settings.downloadserverhelp=De server om de bestanden van te downloaden. Houd hem op Auto voor de beste resultaten.
 settings.forgelogginglevel=Forge Logging Niveau
 settings.forgelogginglevelhelp=Dit bepaalt de type van logging dat Forge naar jou toe rapporteert.%sDit zou moeten staan aan de linkerkant op INFO
